--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,105 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+html{
+	position: relative;
+	min-height: 100%;
+}
+body{
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/*
+footer {
+	bottom: 0;	
+	width: 100%;
+	background-color: black;
+	color: white;
+	font-size: 16px;
+	font-weight: 300;
+	font-family: 'Futura';
+	padding-top: 40px;
 }
+li > a {
+	position: relative;
+	color: white;
+	text-decoration: none;
+  }
+  
+  .list-item a::before,
+  .list-item a::after {
+	content: "";
+	position: absolute;
+	width: 0%;
+	height: 1px;
+	bottom: -1px;
+	transition: width 0.8s ease-out, left 0.4s ease-out, right 0.4s ease-out;
+	background-color: white;
+  }
+  
+  a::before {
+	left: 50%;
+	transform: translateX(-50%);
+  }
+  
+  a::after {
+	right: 50%;
+	transform: translateX(50%);
+  }
+  
+  a:hover::before,
+  a:hover::after {
+	width: 50%;
+	left: 25%;
+	right: 25%;
+  }
+  ul.list-inline {
+	display: flex;
+	text-align: center; /* add this property 
+  }
+
+  .img_item img{
+	width: 48px;
+	height: 48px;
+}
+.img_item img:hover{
+	opacity: 0.7;
+	transition: 1s;
+}
+*/
+  
+/*CategoryCartComponent START*/
+.category-cart {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	margin-bottom: 30px;
+	padding: 10px;
+	text-align: center;
+	width: 25%; /* начальная ширина блока */
+  }
+  .category-cart img {
+	border-radius: 10px;
+	transition: transform 0.6s ease-in-out;
+	padding-top: 20px;
+	padding-bottom: 20px;
+  }
+  
+  .category-cart img:hover {
+	transform: scale(1.2);
+  }
+  .category-cart a:hover{
+	color:red;
+	transition: 0.6s;
+  }
+  
+  @media (max-width: 767px) {
+	.category-cart {
+	  width: 50%; /* изменение ширины блока на меньших экранах */
+	}
+  }
+  .category-cart div {
+	text-align: center;
+  }
+  .category-cart a {
+	color: #3C72A3;
+	text-decoration: none;
+  }
+/*CategoryCartComponent END*/
